# mine-mapping-dataset

./: .gitmodules  Dockerfile.desktop  README.md  filter_and_compress.py
docs/: Gemfile  _config.yml  index.markdown
docs/_posts/: 2022-09-26-welcome-to-jekyll.markdown
docs/assets/: drawing.odg  links.md
extrinsic_calibration/: 3rd  CMakeLists.txt  package.xml
extrinsic_calibration/data/results/: state_init.json  state_norel_pose.json  state_optimized.json  zrab_init.json
extrinsic_calibration/src/: cost_fun.h  extrinsic_calibration.cpp
process_mine_data/: CMakeLists.txt  package.xml
process_mine_data/src/: SaveLAZ.cpp  SaveLAZ.h  export_livox_frames.cpp  export_tele15.cpp  release_data_laz.cpp  release_data_pcd_mat.cpp  utils.h
visualization/: config.rviz  publish_custom_calibration.py
visualize_mine_data/: CMakeLists.txt  package.xml
visualize_mine_data/GL/: Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  shaders_code.h
visualize_mine_data/src/: utils.h  visualize_mine_data.cpp
